src/test/ui/resolve/issue-100365.stderr
error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:2:16
   |
LL |     let addr = Into::<std::net::IpAddr>.into([127, 0, 0, 1]);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:6:13
   |
LL |     let _ = Into.into(());
   |             ^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:10:13
   |
LL |     let _ = Into::<()>.into;
   |             ^^^^^^^^^^- help: use the path separator to refer to an item: `::`

error[E0423]: expected value, found trait `std::iter::Iterator`
  --> $DIR/issue-100365.rs:17:9
   |
LL |         ::std::iter::Iterator
   |         ^^^^^^^^^^^^^^^^^^^^^ not a value
...
LL |     Trait!().map(std::convert::identity); // no `help` here!
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `Trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found trait `std::iter::Iterator`
  --> $DIR/issue-100365.rs:17:9
   |
LL |         ::std::iter::Iterator
   |         ^^^^^^^^^^^^^^^^^^^^^ not a value
...
LL |     Trait!().map; // no `help` here!
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `Trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found trait `Into`
  --> $DIR/issue-100365.rs:25:9
   |
LL |         Into::<String>.into("")
   |         ^^^^^^^^^^^^^^- help: use the path separator to refer to an item: `::`
...
LL |     let _ = create!();
   |             --------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0423`.
